Fix introjs z-index issues Adding Code step Removing intro Numbering

--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,9 @@ html, body{
 body{
   margin: 0;
 }
+.codesw{
+  display: inline;
+}
 /* GRID CSS */
 .container {
   position: relative;
@@ -26,7 +29,7 @@ body{
   left:0px;
   width:100%;
   height:100%;
-  transition:opacity .5s ease-in;  
+  transition:opacity .5s ease-in;
 }
 .container .vis_view{
   display: grid;
